fix: overflow on the container filter addons

--- a/src/routes/Addons/styles.less
+++ b/src/routes/Addons/styles.less
@@ -155,6 +155,10 @@
             .select-input-container {
                 height: 3rem;
 
+                .multiselect-menu-container {
+                    overflow: auto;
+                }
+
                 &:not(:last-child) {
                     margin-bottom: 1rem;
                 }
